add profile on jdk9