@@ -93,6 +93,11 @@
 		<monix.io.version>1.0.0</monix.io.version>
 
 		<main.user.dir>${user.dir}</main.user.dir>
+		<!-- adapted high version jdk start -->
+		<jaxb.version>2.3.0</jaxb.version>
+		<javax.activation.version>1.1.1</javax.activation.version>
+		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+		<!-- adapted high version jdk end -->
 
 		<!-- plugin -->
 		<license.maven.plugin>3.0</license.maven.plugin>
@@ -495,6 +500,43 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<!-- TODO using jdk argLine to get rid of the jaxb dependencies -->
+			<properties>
+				<jdk.argLine>--add-modules java.xml.bind</jdk.argLine>
+			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>javax.xml.bind</groupId>
+					<artifactId>jaxb-api</artifactId>
+					<version>${jaxb.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>com.sun.xml.bind</groupId>
+					<artifactId>jaxb-impl</artifactId>
+					<version>${jaxb.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.glassfish.jaxb</groupId>
+					<artifactId>jaxb-runtime</artifactId>
+					<version>${jaxb.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.activation</groupId>
+					<artifactId>activation</artifactId>
+					<version>${javax.activation.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>javax.annotation</groupId>
+					<artifactId>javax.annotation-api</artifactId>
+					<version>${javax.annotation-api.version}</version>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 
